Make attachment icon rotate correctly on IE 11

--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -137,18 +137,13 @@
 }
 
 .Icon--paperclip-small {
-  padding-right: #{5/$font-size}rem;
-
   svg {
     min-width: #{16/$font-size}rem; /* 1 */
     min-height: #{16/$font-size}rem; /* 1 */
     height: #{16/$font-size}rem;
     width: #{16/$font-size}rem;
-
-    path {
-      transform-origin: center;
-      transform: rotate(45deg);
-    }
+    transform-origin: center;
+    transform: rotate(45deg);
   }
 }
 
